updating files for booking